# Change Log
All notable changes to this project will be documented in this file.

## [1.2.2]

### Changed:
  - ReoCommon#namevalue, namevalue_glob, set_namevalue, set_namevalue_glob replace
    set_namevalue replaces set_rangeval, set_namevalue_glob, respectively
### Added
  - ReoCommon#add_name, rename_range, delete_name

## [1.2.1] 2018-9-2

## [1.2] - 2018-11-8

## [1.1.6] - 2018-20-7

### Added
  - Sheet#cellval
  - Sheet#set_cellval

## [1.1.5] - 2018-10-7

### Added
  - Book#unobtrusively: 
    option :writable

### Changed
  - Book#unobtrusively:
    option :rw_change_excel instead :readonly_excel

### Added

## [1.1.4] - 2018-10-6

### Added
  - Book#open: for the options: simplifiaction: :force can be left out
  - Excel#for_this_instance
  - Excel#for_all_workbooks
  - Book#for_this_workbooks
  - Book#reopen : wirth options

## [1.1.3] - 2018-13-5

## [1.1.2] - 2018-10-5

### Added
  - Excel, Sheet, Book #workbook

## [1.1.1] - 2018-20-4

### Added
  - Book#save, save_as: options: discoloring
  - Book#set_nameval, Sheet, Excel#set_nameval, set_rangeval: option :color

### Changed

  - renamed: Excel.known_excel_instances instead of excel_processes

## [1.1] - 2017-09-29

### Added

  - Book.save, save_as, close

## [1.0.4] - 2017-08-30

## [1.0.3] - 2017-08-27

## [1.0.2] - 2017-07-26

### Added

 - Excel#set_options
 - Excel#retain_saved_workbooks
 - Book#retain_saved

### Changed

 - Book#unobtrusively: option: :if_closed => 

## [1.0.1] - 2017-16-04

### Added
 
 - Book.open : options :calculation
 - Excel.new : options :calculation, :screen_updating
 - Excel#calculation, calculation=, screen_updating, screenupdating=

### Changed

 - Book#open : options: two levels: :default and :force
   example:  
   Book.open(:default =>  {:excel => :current, :visible => true}, {:force => {:excel => :new})

## [0.6.2] - 2016-04-11

### Changed
- Excel#focus (was Excel#activate)
- Book#focus (was Book#activate)

### Added

## [0.6.1] - 2016-04-09

### Changed