@@ -248,6 +248,10 @@ For more details about processing worksheets see {README_sheet}[https://github.c
 
 === Reading and writing ranges in worksheets
 
+We can define a rectangular range by providing the top left and the bottum down cell.
+
+  sheet.range(1,1,3,4)
+
 We can read the first three cells of the first row
 
   sheet.row_range(1, 1..3).values   # => ["foo","workbook","sheet1"]
