@@ -67,8 +67,23 @@ or using RobustExcelOle
 
   sheet[1,1] = "new_value"
 
-Suppose you want to define a range consisting of several cells forming a rectangular.
-Using VBA methods this can be done by
+We can access a range consisting of one cell by providing the row and and the column of a cell.
+
+  sheet.Range(sheet.Cells(1,1))
+
+or using RobustExcelOle
+
+  sheet.range(1,1)
+
+Similarly you can access a rectangular range by providing the top left cell and the bottum right cell.
+
+  sheet.Range(sheet.Cells(1,1), sheet.Cells(3,4))
+
+or with help of RobustExcelOl
+
+  sheet.range(1,1,3,4)
+
+Suppose you want to define a named range consisting of several cells forming a rectangular. Using VBA methods this can be done by
 
   book.Names.Add("Name" => "rec_name", "RefersToR1C1" => "=Z1S2:Z3S4")
 
