@@ -172,6 +172,24 @@ describe Sheet do
       end
     end
 
+    describe "range" do
+
+      it "should create a range of one cell" do
+        @sheet.range(1,1).values.should == ["foo"]
+      end
+
+      it "should create a rectangular range" do
+        @sheet.range(1,2,3,4).values.should == ["workbook", "sheet1", nil, nil, "foobaaa", nil, "is", "nice", nil]
+      end
+
+      it "should raise an error" do
+        expect{
+          @sheet.range(0,0)
+          }.to raise_error(RangeNotCreated, "cannot create range (0,0),(0,0)")
+      end
+
+    end
+
     describe '#each' do
       it "should sort line in order of column" do
         @sheet.each_with_index do |cell, i|
